# ehkzi_os

./: Cargo.toml  config.toml
src/: gdt.rs  interrupts.rs  lib.rs  main.rs  vga_buffer.rs
tests/: baisc_boot.rs  should_panic.rs  stack_overflow.rs
