[package]
name = "ehkzi"
version = "0.1.0"
edition = "2024"

[dependencies]
bootloader = "0.9"
spin = "0.5.2"
volatile = "0.2.6"
x86_64 = "0.14.2"
uart_16550 = "0.2.0"
log = "0.4.22"
pic8259 = "0.10.1"
pc-keyboard = "0.7.0"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[package.metadata.bootimage]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio",
    "-display", "none"
]
test-success-exit-code = 33
test-timeout = 15

[[test]]
name = "should_panic"
harness = false

[[test]]
name = "stack_overflow"
harness = false
